# random_asset_displayer

./: .dockerignore  .gitignore  Cargo.toml  Dockerfile  docker-compose.yaml  pyproject.toml  readme.md  readme.typ  requirements.txt
.github/workflows/: on tag deploy on GitHub.yaml  on tag deploy on Github.yaml  on tag deploy on github.yaml
src/: config.rs  convert_file_extension_to_http_content_type.rs  display_asset_random.rs  display_favicon.rs  error.rs  main.py  main.rs  main_inner.rs  main_outer.py
