[package]
authors     = ["9-FS <pray4spam@googlemail.com>"]
categories  = []
description = ""
edition     = "2021"
exclude     = [".github/", "readme.pdf"]                  # additional to .gitignore
keywords    = []
license     = "MIT"
name        = "random_redirector"
readme      = "readme.md"
repository  = "https://github.com/9-FS/random_redirector"
version     = "2.0.0"

[dependencies]
actix-files   = "^0.6.0"
actix-web     = "^4.0.0"
axum          = "^0.7.0"
figment       = { version = "^0.10.0", optional = true }
log           = "^0.4.0"
rand          = "^0.8.0"
scaler        = "^1.0.0"
serde         = { version = "^1.0.0", optional = true }
serde_json    = { version = "^1.0.0", optional = true }
serde_yaml    = { version = "^0.9.0", optional = true }
setup_logging = { git = "https://github.com/9-FS/setup_logging", tag = "2.1.0" }
tokio         = { version = "^1.0.0", features = ["full"] }
toml          = { version = "^0.8.0", optional = true }

[features]
default          = ["load_toml_config"]
load_config      = ["figment/env", "serde/derive"]
load_json_config = ["figment/json", "load_config", "serde_json"]
load_toml_config = ["figment/toml", "load_config", "toml"]
load_yaml_config = ["figment/yaml", "load_config", "serde_yaml"]
