[package]
authors     = ["9-FS <pray4spam@googlemail.com>"]
categories  = []
description = ""
edition     = "2021"
exclude     = [".github/", "readme.pdf"]                       # additional to .gitignore
keywords    = []
license     = "MIT"
name        = "random_asset_displayer"
readme      = "readme.md"
repository  = "https://github.com/9-FS/random_asset_displayer"
version     = "3.0.0"

[dependencies]
actix-files = "^0.6.0"
actix-web = { version = "^4.0.0", default-features = false, features = [
    "macros",
] }
load_config = { git = "https://github.com/9-FS/load_config", tag = "1.2.1", features = [
    "toml_file",
] }
log = "^0.4.0"
rand = "^0.8.0"
scaler = "^1.0.0"
serde = { version = "^1.0.0", features = ["derive"] }
setup_logging = { git = "https://github.com/9-FS/setup_logging", tag = "2.1.1" }
thiserror = "^2.0.0"
tokio = { version = "^1.0.0", features = ["rt-multi-thread"] }
walkdir = "2.5.0"

[lints.clippy]
needless_late_init = "allow"
needless_return    = "allow"
