[tool.poetry]
authors     = ["9FS <pray4spam@googlemail.com>"]
description = ""
license     = "MIT"
name        = "x"                                                    # can't leave empty because of bug with `poetry install` from poetry.lock file
readme      = "readme.md"
repository  = "https://github.com/9-FS/2023-11-16-Random-Redirector"
version     = "1.1.4"

[tool.poetry.dependencies]
flask     = "^3.0.0"
kfsconfig = "^1.0.2"
kfslog    = "^1.0.0"
python    = "^3.11.0"

[tool.poetry.group.dev.dependencies]
hypothesis = "^6.87.0"
pytest     = "^7.4.2"

[build-system]
build-backend = "poetry.core.masonry.api"
requires      = ["poetry-core"]
